# ezsquirrel

./: CMakeLists.txt  README.md
sqstdlib/: CMakeLists.txt
squirrel/: CMakeLists.txt
